# tinyjvm

./: CMakeLists.txt  LICENSE  README.md  class_loader.c  class_loader.h  hashtable.c  hashtable.h  interpreter.c  jvm.c  jvm.h  list.c  list.h  native.c  native.h  string.c  string.h  types.h  util.c  util.h
include/: jni.h
libjava/: Object.c
tests/: test.h  test_hashtable.c  test_interpreter.c  test_loader.c
tests/data/: ArrayTest.java  Basic.java  Exceptions.java  FunctionCalls.java  InstanceMethod.java  NativeBasic.java  SelfInitialize.java  SelfInitializeParent.java  build.sh
tests/data/java/lang/: Object.java
tests/data/native_test/: NativeBasic.c
